import { Controller } from '@nestjs/common';
import { GrpcMethod } from '@nestjs/microservices';
import { PaperService } from './paper.service';

@Controller()
export class PaperGrpcController {
  constructor(private readonly paperService: PaperService) {}

  // ==================== 试卷管理 ====================

  @GrpcMethod('PaperService', 'FindById')
  async findById(data: { id: string }) {
    // TODO: 实现查找试卷逻辑
    return {
      id: data.id,
      title: '测试试卷',
      type: 'normal',
      // ... 其他字段
    };
  }

  @GrpcMethod('PaperService', 'FindMany')
  async findMany(data: {
    page?: number;
    limit?: number;
    search?: string;
    type?: string;
    categoryId?: string;
    creatorId?: string;
  }) {
    // TODO: 实现查询试卷列表逻辑
    return {
      papers: [],
      total: 0,
      page: data.page || 1,
      limit: data.limit || 10,
    };
  }

  @GrpcMethod('PaperService', 'Create')
  async create(data: any) {
    // TODO: 实现创建试卷逻辑
    return {
      id: 'new_paper_id',
      title: data.title,
      // ... 其他字段
    };
  }

  @GrpcMethod('PaperService', 'Update')
  async update(data: any) {
    // TODO: 实现更新试卷逻辑
    return {
      id: data.id,
      // ... 更新后的字段
    };
  }

  @GrpcMethod('PaperService', 'Delete')
  async delete(data: { id: string }) {
    // TODO: 实现删除试卷逻辑
    return {
      success: true,
      message: '试卷已删除',
    };
  }

  // ==================== 组卷操作 ====================

  @GrpcMethod('PaperService', 'AddQuestions')
  async addQuestions(data: { paperId: string; questions: any[] }) {
    // TODO: 实现添加题目到试卷逻辑
    return {
      id: data.paperId,
      // ... 更新后的试卷信息
    };
  }

  @GrpcMethod('PaperService', 'RemoveQuestions')
  async removeQuestions(data: { paperId: string; questionIds: string[] }) {
    // TODO: 实现从试卷移除题目逻辑
    return {
      id: data.paperId,
      // ... 更新后的试卷信息
    };
  }

  @GrpcMethod('PaperService', 'ReorderQuestions')
  async reorderQuestions(data: { paperId: string; questionOrders: any[] }) {
    // TODO: 实现调整题目顺序逻辑
    return {
      id: data.paperId,
      // ... 更新后的试卷信息
    };
  }

  // ==================== 智能组卷 ====================

  @GrpcMethod('PaperService', 'SmartGenerate')
  async smartGenerate(data: {
    title: string;
    categoryId: string;
    totalScore: number;
    questionTypes: any[];
    knowledgePointIds?: string[];
    difficulty?: string;
  }) {
    // TODO: 实现AI智能组卷逻辑
    // 1. 根据配置从题库智能选择题目
    // 2. 考虑难度分布、知识点覆盖
    // 3. 创建试卷并关联题目
    return {
      id: 'smart_generated_paper_id',
      title: data.title,
      // ... 其他字段
    };
  }

  @GrpcMethod('PaperService', 'GenerateMultiple')
  async generateMultiple(data: {
    baseConfig: any;
    count: number;
    randomize: boolean;
  }) {
    // TODO: 实现批量生成试卷逻辑（AB卷）
    return {
      papers: [],
      total: data.count,
      page: 1,
      limit: data.count,
    };
  }

  // ==================== 模拟卷管理 ====================

  @GrpcMethod('PaperService', 'CreateMockPaper')
  async createMockPaper(data: {
    title: string;
    description: string;
    categoryId: string;
    year: string;
    source: string;
    questions: any[];
  }) {
    // TODO: 实现创建模拟卷逻辑
    return {
      id: 'mock_paper_id',
      title: data.title,
      type: 'mock',
      // ... 其他字段
    };
  }

  @GrpcMethod('PaperService', 'GetMockPapers')
  async getMockPapers(data: {
    categoryId?: string;
    year?: string;
    page?: number;
    limit?: number;
  }) {
    // TODO: 实现查询模拟卷列表逻辑
    return {
      papers: [],
      total: 0,
      page: data.page || 1,
      limit: data.limit || 10,
    };
  }

  // ==================== 试卷统计 ====================

  @GrpcMethod('PaperService', 'GetPaperStats')
  async getPaperStats(data: { paperId: string }) {
    // TODO: 实现获取试卷统计信息逻辑
    return {
      paperId: data.paperId,
      totalAttempts: 0,
      averageScore: 0,
      passRate: 0,
      questionStats: [],
    };
  }
}

